--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.10'
-
+    
+    - name: Install Cython
+        run: |
+          python -m pip install --upgrade pip
+          pip install Cython
+  
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
