--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,9 @@ jobs:
   
     - name: Install dependencies
       run: |
-        pip install -r requirements.txt
+          python -m pip install --upgrade pip
+          pip install --no-cache-dir --prefer-binary -r requirements.txt
+    
 
     - name: Start API Server
       run: |
