--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,17 +29,20 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.10'
-    
+
     - name: Install Cython
       run: |
-          python -m pip install --upgrade pip
-          pip install Cython
-  
-    - name: Install dependencies
+        python -m pip install --upgrade pip
+        pip install Cython
+
+    - name: Install Jnius with Cython dependency
       run: |
-          python -m pip install --upgrade pip
-          pip install --no-cache-dir --prefer-binary -r requirements.txt
-    
+        # Install jnius separately to resolve Cython dependency
+        pip install jnius==1.1.0
+
+    - name: Install remaining dependencies
+      run: |
+        pip install -r requirements.txt
 
     - name: Start API Server
       run: |
