--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,14 +30,14 @@ jobs:
       with:
         python-version: '3.10'
 
-    - name: Install Cython
+    - name: Upgrade pip and install Cython
       run: |
         python -m pip install --upgrade pip
         pip install Cython
+        pip cache purge  # Clear pip cache to ensure fresh install
 
     - name: Install Jnius with Cython dependency
       run: |
-        # Install jnius separately to resolve Cython dependency
         pip install jnius==1.1.0
 
     - name: Install remaining dependencies
