--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,15 +30,14 @@ jobs:
       with:
         python-version: '3.10'
 
-    - name: Upgrade pip and install Cython
+    - name: Install Cython for Jnius
       run: |
-        python -m pip install --upgrade pip
-        pip install Cython
-        pip cache purge  # Clear pip cache to ensure fresh install
+        pip install --upgrade pip
+        pip install Cython==3.0.11
 
-    - name: Install Jnius with Cython dependency
+    - name: Install Jnius separately
       run: |
-        pip install jnius==1.1.0
+        pip install --no-cache-dir jnius==1.1.0
 
     - name: Install remaining dependencies
       run: |
