--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Run tests
+dname: Run tests
 
 on: [push, pull_request]
 
@@ -30,14 +30,17 @@ jobs:
       with:
         python-version: '3.10'
 
-    - name: Install Cython
+    - name: Upgrade pip and install Cython
       run: |
         python -m pip install --upgrade pip
         pip install Cython==3.0.11
+      env:
+        PYTHONPATH: ""
 
-    - name: Install Jnius with Cython
+    - name: Clear cache and install Jnius
       run: |
-        python -m pip install --no-cache-dir jnius==1.1.0
+        export PIP_NO_CACHE_DIR=off
+        pip install jnius==1.1.0
 
     - name: Install remaining dependencies
       run: |
