--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,20 +30,11 @@ jobs:
       with:
         python-version: '3.10'
 
-    - name: Upgrade pip and install Cython
+    - name: Install dependencies with Cython and pyjnius
       run: |
         python -m pip install --upgrade pip
         pip install Cython==3.0.11
-      env:
-        PYTHONPATH: ""
-
-    - name: Clear cache and install Jnius
-      run: |
-        export PIP_NO_CACHE_DIR=off
-        pip install jnius==1.1.0
-
-    - name: Install remaining dependencies
-      run: |
+        pip install --no-cache-dir pyjnius==1.1.0
         pip install -r requirements.txt
 
     - name: Start API Server
