--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Install dependencies with Cython and pyjnius
       run: |
         python -m pip install --upgrade pip
-        pip install Cython==3.0.11
+        pip install --no-cache-dir Cython==3.0.11
         pip install --no-cache-dir pyjnius==1.6.0
         pip install -r requirements.txt
 
